--- a/Contest202510/.env.example
+++ b/Contest202510/.env.example
@@ -1,3 +1,4 @@
 OPENAI_API_KEY=your_openai_api_key_here
+ANTHROPIC_API_KEY=your_anthropic_api_key_here
 OLLAMA_BASE_URL=http://localhost:11434
 APP_TITLE=문서 기반 질의응답 챗봇
